JSON-LD callback compliant with OGCAPI and some fixes